# pipeworks-character-forge

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  codecov.yml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  release-please.yml
deploy/: install.sh  uninstall.sh
deploy/env/: character-forge.env.example
deploy/nginx/: forge.pipeworks.luminal.local
deploy/systemd/: pipeworks-character-forge.service
src/pipeworks_character_forge/: __init__.py
src/pipeworks_character_forge/api/: __init__.py  dependencies.py  main.py
src/pipeworks_character_forge/api/routers/: __init__.py  debug.py  runs.py  slots.py  source.py
src/pipeworks_character_forge/api/services/: __init__.py  anchor_variant.py  job_queue.py  pipeline_orchestrator.py  run_store.py  scene_pack.py  slot_catalog.py
src/pipeworks_character_forge/cli/: __init__.py  make_dataset.py
src/pipeworks_character_forge/core/: __init__.py  config.py  flux2_manager.py  image_io.py
src/pipeworks_character_forge/data/: slots.json
src/pipeworks_character_forge/data/anchor_variants/: default.json  illustrated.json  photoreal.json
src/pipeworks_character_forge/data/scene_packs/: default.json  high_fantasy.json  modern.json
src/pipeworks_character_forge/static/css/: forge.css
src/pipeworks_character_forge/static/js/: app.js  progress-bus.mjs  run-client.mjs  slot-grid.mjs  slot-tile.mjs  source-panel.mjs  theme-toggle.mjs
src/pipeworks_character_forge/templates/: index.html
tests/: _fakes.py  conftest.py  test_anchor_variant.py  test_api_health.py  test_api_runs.py  test_api_source_and_debug.py  test_cli_make_dataset.py  test_flux2_manager.py  test_image_io.py  test_job_queue.py  test_pipeline_orchestrator.py  test_scene_pack.py  test_slot_catalog.py
